Revise Data_Finalization.Rmd

--- a/R/Data_Finalization.Rmd
+++ b/R/Data_Finalization.Rmd
@@ -131,7 +131,7 @@ pa_data$size_class_circ <- factor(pa_data$size_class_circ, levels = c("J","IA","
 
 
 ####Plot pa_ratio with size base on morphological stages####
-png(file="C:/Users/keelu/R/FiFu_analysis/Figs/SizeClass_scatter.png",
+png(file="figs/SizeClass_scatter.png",
 width=800, height=650, res=100)
 
 par(mfrow=c(1,3))
@@ -152,7 +152,7 @@ abline(v=log10(pi*0.03^2))#check the standard of adult
 abline(h=log10(cutoff_circ)) #check the standard of compact adult
 dev.off()
 ```
-![Fig0](Figs/SizeClass_scatter.png)
+![Fig0](figs/SizeClass_scatter.png)
 ```{r}
 # Calculate R square, size vs shape
 model_PA <- lm(log10(Shape_Area) ~ log10(pa_ratio), data = pa_data)
@@ -186,8 +186,7 @@ for (i in 1:3) {
 
 #plot together
 fig1 <- plot_grid(plot_list[[1]],plot_list[[2]],plot_list[[3]],align="h",labels=c("A","B","C"),nrow = 1)
-ggsave("C:/Users/keelu/R/FiFu_analysis/Figs/times_proportion_fillbox.png", plot = fig1, width = 6, height = 5.3, dpi = 100)
-dev.off()
+ggsave("figs/times_proportion_fillbox.png", plot = fig1, width = 6, height = 5.3, dpi = 100)
 ```
 ![Fig1](Figs/times_proportion_fillbox.png)
 
@@ -405,35 +404,10 @@ pa_data_done$rate_ad <-  ifelse(pa_data_done$Survey_times == 1 & pa_data_done$Pl
 # Summarize the finalized data and export the finalized data
 ```{r}
 summary(pa_data_done)
-write.csv(pa_data_done, file = "C:/Users/keelu/R/FiFu_analysis/data/pa_data_done.csv")
+write.csv(pa_data_done, file = "output/pa_data_done.csv")
 ```
 
-
-# Check normal distributin of multiplier
-```{r}
-####plot histgram to check normal distributin
-pa_data_done_12 <-  filter(pa_data_done, Survey_times == 1 | Survey_times == 2)
-hist(pa_data_done_12$rate_ad, breaks = 30)
-
-rate_ad_adjusted <- pa_data_done_12$rate_ad
-rate_ad_adjusted[rate_ad_adjusted == 0] <- .Machine$double.eps # replace zero to very samll value
-qqnorm(rate_ad_adjusted)
-qqline(rate_ad_adjusted)
-shapiro.test(rate_ad_adjusted) # Shapiro-Wilk normality test
-```
-
-# Check normal distributin of size
-```{r}
-####plot histgram to check normal distributin
-hist(pa_data_done$Shape_Area, breaks = 30)
-
-qqnorm(pa_data_done$Shape_Area)
-qqline(pa_data_done$Shape_Area)
-shapiro.test(pa_data_done$Shape_Area) # Shapiro-Wilk normality test
-```
-
-
-# Check normal distributin of log(size)
+# Check normal distributin of log10(size)
 ```{r}
 ####plot histgram to check normal distributin
 hist(log10(pa_data_done$Shape_Area), breaks = 30)
@@ -443,27 +417,7 @@ qqline(log10(pa_data_done$Shape_Area))
 shapiro.test(log10(pa_data_done$Shape_Area)) # Shapiro-Wilk normality test
 ```
 
-# Check normal distributin of circ
-```{r}
-####plot histgram to check normal distributin
-hist(pa_data_done$circ, breaks = 30)
-
-qqnorm(pa_data_done$circ)
-qqline(pa_data_done$circ)
-shapiro.test(pa_data_done$circ) # Shapiro-Wilk normality test
-```
-
-# Check normal distributin of log(circ)
-```{r}
-####plot histgram to check normal distributin
-hist(log(pa_data_done$circ), breaks = 30)
-
-qqnorm(log(pa_data_done$circ))
-qqline(log(pa_data_done$circ))
-shapiro.test(log(pa_data_done$circ)) # Shapiro-Wilk normality test
-```
-
-# Check normal distributin of log(pa ratio)
+# Check normal distributin of log10(pa ratio)
 ```{r}
 ####plot histgram to check normal distributin
 hist(log10(pa_data_done$pa_ratio), breaks = 30)
@@ -482,17 +436,4 @@ hist(logit_circ, breaks = 30)
 qqnorm(logit_circ)
 qqline(logit_circ)
 shapiro.test(logit_circ) # Shapiro-Wilk normality test
-```
-
-# Check normal distributin of log10(rate_ad)
-```{r}
-####plot histgram to check normal distributin
-hist(log10(pa_data_done_12$rate_ad), breaks = 30)
-
-pa_data_done_12_ND <- filter(pa_data_done_12, Fate != "D")
-
-
-qqnorm(log10(pa_data_done_12_ND$rate_ad))
-qqline(log10(pa_data_done_12_ND$rate_ad))
-shapiro.test(log10(pa_data_done_12_ND$rate_ad)) # Shapiro-Wilk normality test
 ```
